<resources>
    <string name="app_name">DTC</string>
    <string name="progress_title">Please wait</string>
    <string name="page_is_loading">Page is loading</string>
    <string name="interactive_animation">Interactive animation</string>
    <string name="auto_visibility">Auto visibility</string>
    <string-array name="animation_type">
        <item>None</item>
        <item>Color</item>
        <item>Scale</item>
        <item>Worm</item>
        <item>Slide</item>
        <item>Fill</item>
        <item>Thin Worm</item>
        <item>Drop</item>
        <item>Swap</item>
    </string-array>
    <string-array name="orientation">
        <item>Horizontal</item>
        <item>Vertical</item>
    </string-array>
    <string name="home">Home</string>
    <string name="right_to_left_mode">Right to left mode</string>
    <string name="Phoneno">+971 (0)2 681 7493</string>
    <string name="PObox">P.O. Box 47388, Abu Dhabi, U.A.E.</string>
    <string name="Email">  support@mlt-uae.ae</string>
    <string name="Location">Location</string>
    <string name="Fax">Fax</string>
    <string name="fax">+971 (0)2 681 7499</string>
    <string name="Area">Office # 5311 and 5312, Addax Tower, Al-Reem Island</string>
    <string name="Coordinates">24.4989° N 54.4031° E</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="mobileno">Mobile No*</string>
    <string name="issueoccured">Issue Type</string>
    <string name="message">Message*</string>
    <string name="google_maps_key">	AIzaSyB0ZCLT-QKhe5S4gdIP5h9MAE9x6w33WuY</string>
    <string name="hidekeyboard">Hide Keyboard</string>
    <string name="destend">Kilometers Travelled </string>
    <string name="deststartaddress">Start Address  </string>
    <string name="destendaddress">End Address  </string>
    <string name="duration">Trip Duration  </string>
    <string name="Country">Country </string>
    <string name="fare">Fare  </string>
    <string name="startfare">Start Fare  </string>
    <string name="startdatetime">Start Date and Time  </string>
    <string name="enddatetime">End Date and Time  </string>
    <string name="City">City </string>
    <string name="Abbreviations">Abbreviations  </string>
    <string name="Capital">Capital</string>
    <string name="DialCode">Dial Code</string>
    <string name="CurrentTime">Current Time</string>
    <string name="CurrentDate">Current Date</string>
    <string-array name="issues_array">
        <item>Driver Details</item>
        <item>Trip Details</item>
        <item>About us</item>
        <item>Happy Meter</item>
        <item>RTA services</item>
        <item>DTC services</item>
        <item>Other government Services</item>
        <item>Utilities and other services</item>
        <item>E-Commerce online shop</item>
        <item>Classified Advertisement</item>
        <item>Offers</item>
        <item>Banners</item>
        <item>About Us</item>
        <item>News</item>
        <item>Maps</item>
        <item>Weather</item>
        <item>Entertainment</item>
    </string-array>
    <string-array name="rtl">
        <item>On</item>
        <item>Off</item>
        <item>Auto</item>
    </string-array>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="mlt">Multi Level Technology</string>
    <string name="modelno">Model xCL_E200CP</string>
    <string name="fccid">FCC ID:MQT-E200CP</string>
    <string name="pci">PCI 5.0:4-40217</string>
    <string name="europe">Europe</string>
    <string name="traid">TRA ID DA65900/17</string>
    <string name="ta">TA ER60424/18</string>
    <string name="weee">WEEE Verified</string>
    <string name="rohs">RoHS Compliance</string>
    <string name="svhc">SVHC Tested</string>
    <string name="mltaboutus1"><b>Multi Level Technology</b> (MLT), a UAE based Fintech company established a strategic partnership with Dubai Taxi Corporation (DTC) for the implementation of a unique in taxi platform to provide customers with smart and cashless payment options in addition to various infotainment options.</string>
    <string name="mltaboutus2">The Smart Screen platform provides passengers with interactive services, media content, advertisements extended to payment that encourages a  cashless environment and e-commerce through a single platform.</string>
    <string name="mltaboutus3"><b>To advertise here, contact us at:</b></string>
    <string name="mltaboutus4">Tel. 600 54 55 56, or</string>
    <string name="mltaboutus5">Email. ask@mlt-uae.ae</string>
    <string name="happyscreenthankyoutext">Thank you for helping make Dubai the happiest city on earth</string>
    <string name="Home">Home</string>
    <string name="Info">Info</string>
    <string name="Back">Back</string>
    <string name="BackEnglish">Back</string>
    <string name="Ok">OK</string>
    <string name="RTAService">RTA Services</string>
    <string name="CompletePayment">Complete Payment</string>
    <string name="CardPayment">Card Payment</string>
    <string name="RTACertificates">Certificates</string>
    <string name="Selectanyoneoption">Select any one option</string>
    <string name="FineInquiryandPayments">Fine Inquiry and Payments</string>
    <string name="VehicleRegistrationServices">RTA Vehicle Services</string>
    <string name="VehicleRegistrationRenewal">Vehicle Registration Renewal</string>
    <string name="VehicleRegistrationLossDamage">Vehicle Registration Card Loss/Damage</string>
    <string name="DrivingLicenseServices">RTA Driving Services</string>
    <string name="DrivingLicenseRenewal">Driving License Renewal</string>
    <string name="DrivingLicenseLossDamage">Driving License Loss/Damaged</string>
    <string name="ParkingServices">RTA Parking Services</string>
    <string name="PrintingCertificate">Printing Certificate</string>
    <string name="Newseasonalcard">New Seasonal Card</string>
    <string name="Seasonalcardrennewal">Seasonal Card Renewal</string>
    <string name="seasonalparkingcard">Seasonal Parking Card</string>
    <string name="seasonalparkingcardrenewal">Seasonal Parking Card Renewal</string>
    <string name="ApplicantName">Applicant Name</string>
    <string name="EnterCardNumber">Enter Card Number</string>
    <string name="PleaseEnteryourCVV">Please Enter your CVV</string>
    <string name="CardType">Card Type</string>
    <string name="CardPeriod">Card Period</string>
    <string name="MobileNumber">Mobile Number*</string>
    <string name="ActivationDate">Activation Date</string>
    <string name="FineInquiryandPayment">Fine Inquiry and Payment</string>
    <string name="TrafficFileNumber">Traffic File Number</string>
    <string name="DrivingLicense">Driving License</string>
    <string name="PlateNumber">Plate Number</string>
    <string name="FineNumber">Fine Number</string>
    <string name="FinesByTrafficFileNo">Fines By Traffic File Number</string>
    <string name="FinesByPlateNo">Fines By Plate Number</string>
    <string name="FinesByDrivingLicense">Fines By Driving License</string>
    <string name="FinesByFineNumber">Fines By Fine Number</string>
    <string name="LicenseNo">License Number</string>
    <string name="LicenseSource">License Source</string>
    <string name="Placeofissue">Place of Issue</string>
    <string name="BirthYear">Birth Year</string>
    <string name="TicketYear">Ticket Year</string>
    <string name="Plateno">Plate Number</string>
    <string name="Platecode">Plate Code</string>
    <string name="Platecategory">Plate Category</string>
    <string name="ReplacementReason">Replacement Reason</string>
    <string name="Platetype">Plate Type</string>
    <string name="Fineno">Fine Number</string>
    <string name="BeneficiaryCode">Beneficiary Code</string>
    <string name="Search">Search</string>
    <string name="Continue">Continue</string>
    <string name="Submit">Submit</string>
    <string name="AddVehicle">Add Vehicle</string>
    <string name="TicketNumber">TicketNumber</string>
    <string name="DrivingLicenseInformation">Driving License Information</string>
    <string name="FineInformation">Fine Information</string>
    <string name="Date">Date</string>
    <string name="FineAmount">FineAmount</string>
    <string name="Penalty">Penalty</string>
    <string name="KnowledgeFee">Knowledge Fee</string>
    <string name="Expirydate">Expiry Date</string>
    <string name="Total">Total</string>
    <string name="Details">Details</string>
    <string name="UnPayableTickets">Unpayable Tickets</string>
    <string name="FineCount">FineCount:</string>
    <string name="BlackPointsCount">Black Points Count:\u0020</string>
    <string name="SelectedFine">Selected Fine:\u0020</string>
    <string name="fineAmount">FineAmount:\u0020</string>
    <string name="SelectedFineAmount">Selected Fine Amount:\u0020</string>
    <string name="FineSource">Fine Source</string>
    <string name="Time">Time</string>
    <string name="VehicleSpeed">Vehicle Speed</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="DueAmount">Due Amount</string>
    <string name="Amount">Amount</string>
    <string name="Status">Status</string>
    <string name="ServiceCharge">Service Charge</string>
    <string name="FineYear">Fine Year</string>
    <string name="Violations">Violations</string>
    <string name="FineStatus">Fine Status</string>
    <string name="PlateSource">Plate Source</string>
    <string name="ContactDetails">Contact Details</string>
    <string name="EnteryourEmailAddressor">Enter your Email Address </string>
    <string name="EnteryourEmailAddress">Enter your Email Address</string>
    <string name="EnteryourMobileNumber">Enter your Mobile Number</string>
    <string name="getdigitalpass">Enter email and mobile no to receive the receipt and Digital Pass.</string>
    <string name="getreceipt">Enter email address to receive the receipt.</string>
    <string name="RTAParkingFines">RTA (Parking Fines) FINE NO. 12345</string>
    <string name="PaymentConfirmation">Payment Confirmation</string>
    <string name="Paynow">Pay Now</string>
    <string name="YourPaymentisbeingprocessed">Your Payment is under process</string>
    <string name="Pleaseswipeyourcard">Please swipe your card</string>
    <string name="ProceedToPayment">Proceed To Payment</string>
    <string name="Proceed">Proceed</string>
    <string name="Description">Description</string>
    <string name="Birthyearhint">e.g. 1988</string>
    <string name="seconds">Sec </string>
    <string name="sixtysecs">60</string>
    <string name="Phone">Phone:</string>
    <string name="Phonemlt">600 54 55 56</string>
    <string name="EmailMLT">E-Mail:</string>
    <string name="Emailmlt">support@mlt-uae.ae</string>
    <string name="ContactUs">Contact Us</string>
    <string name="couriorServices">Courier Service</string>
    <string name="Pleasetapyourcard">please tap your card</string>
    <string name="redbuttontext">Please press red button to cancel the transaction.</string>
    <string name="yellowbuttontext">Please Press yellow button to clear text.</string>
    <string name="greenbuttontext">Please Press green button to Proceed Transaction.</string>
    <string name="secondsdtc">Sec </string>
    <string name="wind">Wind: </string>
    <string name="humidity">Humidity: </string>
    <string name="min">Min  :</string>
    <string name="max">Max :</string>
    <string name="mph">mph</string>
    <string name="percent">%</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="one_of_our_technical_support_staff_will_get_back_to_you_at_the_earliest">One of our technical support staff will get back to you at the earliest.</string>
    <string name="ok">ok</string>
    <string name="mp_cardswipe">YOUR PAYMENT IS UNDER PROCESS</string>
    <string name="mp_cardswipe2">PLEASE SWIPE YOUR CARD</string>
    <string name="mp_titleCardPayment">Card Payment</string>
</resources>