<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="@dimen/tv_width3"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mltaboutus1"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_size_nm" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mltaboutus2"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_size_nm" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/mltaboutus3"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_size_nm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/mltaboutus4"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_size_nm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/mltaboutus5"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_size_nm" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
