<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/thanks_for_your_feedback"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/one_of_our_technical_support_staff_will_get_back_to_you_at_the_earliest"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="234dp" />

    <Button
        android:id="@+id/confirmation_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/btn_background_blue"
        android:textColor="@color/colorwhite"
        android:text="@string/ok" />
</LinearLayout>