<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
    android:layout_width="match_parent"
        android:layout_height="@dimen/tv_width20">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/gif_layout"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:padding="@dimen/tv_width15">

            <ImageView
                android:id="@+id/gifImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/actionType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/tv_width5"
                android:paddingBottom="@dimen/tv_width5"
                android:paddingLeft="@dimen/tv_width40"
                android:paddingRight="@dimen/tv_width40"
                android:text="@string/Pleasetapyourcard"
                android:maxWidth="300dp"
                android:textColor="@color/colorbrown"
                android:textSize="@dimen/tv_size_n" />

            <TextView
                android:id="@+id/redbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/tv_width5"
                android:paddingBottom="@dimen/tv_width5"
                android:paddingLeft="@dimen/tv_width40"
                android:paddingRight="@dimen/tv_width40"
                android:text="@string/redbuttontext"
                android:maxWidth="300dp"
                android:textColor="@color/colorbrown"
                android:textSize="@dimen/tv_size_n" />

            <TextView
                android:id="@+id/greenbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/tv_width5"
                android:paddingBottom="@dimen/tv_width5"
                android:paddingLeft="@dimen/tv_width40"
                android:paddingRight="@dimen/tv_width40"
                android:text="@string/greenbuttontext"
                android:maxWidth="300dp"
                android:textColor="@color/colorbrown"
                android:textSize="@dimen/tv_size_n" />


            <TextView
                android:id="@+id/yellowbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/tv_width5"
                android:paddingBottom="@dimen/tv_width5"
                android:paddingLeft="@dimen/tv_width40"
                android:paddingRight="@dimen/tv_width40"
                android:text="@string/yellowbuttontext"
                android:maxWidth="300dp"
                android:textColor="@color/colorbrown"
                android:textSize="@dimen/tv_size_n" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>