<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorwhite"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_fill">

            <TextView
                android:id="@+id/tv_currenttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorwhite"
                android:textSize="12sp" />

            <androidx.legacy.widget.Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_currentmdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorwhite"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/iv_weatherimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wdayclearskybig"
            android:contentDescription="@null" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colordarkgreen"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colordarkgreen"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorlightbrown" />

            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max"
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_tempmax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_tempmin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_humid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/colordarkgreen"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mph"
                        android:textSize="12sp" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:text="@string/Back"
            android:focusable="true" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="@drawable/roundcornerbrownborderweather"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_cities"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="horizontal"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
